# image-loader

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  main.cpp
cmake/: conan.cmake
example/: CMakeLists.txt  example01.cpp  example02.cpp
imageloader/loader/: CMakeLists.txt
imageloader/loader/inc/: ErrorCodes.hpp
imageloader/loader/inc/tgaImage/: Constants.hpp  TGAImage.hpp  TGAImageLoad.hpp
imageloader/loader/src/tgaImage/: TGAImage.cpp  TGAImageLoad.cpp
utils/: CMakeLists.txt
utils/inc/: Constants.hpp  Logger.hpp
utils/src/: Logger.cpp
